# driving

./: .gitignore  DEVLOG.md  README.md  STACK.md  pyproject.toml  session.md  vercel.json
components/: cesium.json  terrain-dem.json  viz-demo.json
docs/: HANDOFF-overnight.md
docs/plans/: 2026-06-20-3d-sim-setup.md
docs/superpowers/plans/: 2026-06-21-v2-crash-split-multiregion.md
docs/superpowers/specs/: 2026-06-20-rl-env-reframe-design.md  2026-06-20-rules-native-verifier-design.md  2026-06-20-sim-hosting.md
runs_mission/: trained_peds_it00299.msgpack
scripts/: build_3d_demo.py  eval_policy.py  export_snapshots.py  gif_from_trajectories.py  make_demo_gif.py  preview_terrain.py  smoke_3d.py  smoke_env.py  smoke_train_verifier.py  smoke_verifier.py
smoothride/: jaxcfg.py
smoothride/data/: buildings.py  map_loader.py  terrain.py
smoothride/demo/: DEPLOY.md  export_cesium.py  export_lanes.py  export_web.py  landing.html  render.py  scene.py
smoothride/demo/cesium/: README.md  app.js  config.example.js  index.html  style.css
smoothride/demo/cesium/public/: trajectories.json
smoothride/env/: kinematic.py  ped_paths.py  perception.py  routing.py  trace.py
smoothride/eval/: verifier.py
smoothride/rl/: modal_train.py  networks.py  pid_lagrangian.py  ppo.py  trace.py  verifier.py
smoothride/worldsim/: build_sf_scene.py
tests/: test_dynamics_3d.py  test_occlusion.py  test_terrain.py  test_verifier.py
tests/data/: test_buildings.py  test_map_loader_cache.py
tests/demo/: test_export_cesium.py  test_scene.py
tests/env/: test_kinematic_peds.py  test_ped_paths.py  test_remove_on_arrival.py  test_spawn_no_overlap.py
tests/rl/: conftest.py  test_cost_components.py  test_networks_attention.py  test_networks_deepsets.py  test_pid_lagrangian.py  test_ppo_pid.py  test_ppo_smoke.py  test_region_for_iter.py  test_verifier.py  test_verifier_pedyield.py
