[project]
name = "smoothride"
version = "0.1.0"
description = "Multi-agent RL for a trafficless 2040 San Francisco"
requires-python = ">=3.10"

# Installed in layers so each vertical slice is verifiable on its own.
# data:  the map / proximity / traffic ground-truth layer
# rl:    the kinematic env + MAPPO training (JAX)
# Install:  pip install -e ".[data,rl]"
dependencies = []

[project.optional-dependencies]
data = [
  "osmnx>=2.0",
  "networkx>=3.0",
  "shapely>=2.0",
  "geopandas>=1.0",
  "pandas>=2.0",
  "numpy>=1.26",
  "pyproj>=3.6",
  "py3dep>=0.16",
]
rl = [
  "jax>=0.4.30",
  "flax>=0.8",
  "optax>=0.2",
  "numpy>=1.26",
]
demo = [
  "matplotlib>=3.8",
  "pyarrow>=15",
]
# lowlevel: only the LOCAL launcher for Modal jobs. Isaac Sim / Isaac Lab /
# RSL-RL live in the Modal container image (see smoothride/lowlevel/modal_image.py),
# NOT here — they don't install on macOS. Install:  pip install -e ".[lowlevel]"
lowlevel = [
  "modal>=0.64",
]
# worldsim: 3D physics-car path on the Antim/HUD worldsim (Newton). Newton itself
# runs in the Modal GPU image (render_modal.py); locally you only need the launcher
# + mujoco to author/validate scenes. Install:  pip install -e ".[worldsim]"
worldsim = [
  "modal>=0.64",
  "mujoco>=3.2",
  "imageio>=2.34",
]
# dev: test toolchain. The verifier/trace layer is pure numpy + pytest, so it is
# verifiable on its own without the JAX `rl` stack.
dev = [
  "pytest>=8.0",
  "numpy>=1.26",
]

[tool.pytest.ini_options]
# Make `smoothride` importable without an editable install (keeps the pure-numpy
# verifier tests off the JAX install path).
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smoothride*"]
